--- a/package.json
+++ b/package.json
@@ -5,32 +5,32 @@
   "main": "index.js",
   "author": "",
   "dependencies": {
-    "axios": "^0.15.3",
-    "babel-core": "^6.7.6",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "^6.7.5",
-    "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.7.2",
-    "babel-runtime": "^6.6.1",
-    "convict": "^2.0.0",
-    "css-loader": "^0.26.1",
-    "express": "^4.14.0",
-    "express-graphql": "^0.6.1",
-    "fetch": "^1.1.0",
-    "graphiql": "^0.9.2",
-    "graphql": "^0.8.2",
+    "axios": "0.16.1",
+    "babel-core": "6.24.1",
+    "babel-loader": "7.0.0",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-polyfill": "6.23.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-react-hmre": "1.1.1",
+    "babel-preset-stage-0": "6.24.1",
+    "babel-register": "6.24.1",
+    "babel-runtime": "6.23.0",
+    "convict": "3.0.0",
+    "css-loader": "0.28.1",
+    "express": "4.14.0",
+    "express-graphql": "0.6.1",
+    "fetch": "1.1.0",
+    "graphiql": "0.9.2",
+    "graphql": "0.9.6",
     "graphql-utilities": "0.0.14",
-    "isomorphic-fetch": "^2.2.1",
-    "json-to-graphql": "^0.1.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "request": "^2.79.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.14.0"
+    "isomorphic-fetch": "2.2.1",
+    "json-to-graphql": "0.1.1",
+    "react": "15.4.2",
+    "react-dom": "15.4.2",
+    "request": "2.81.0",
+    "style-loader": "0.17.0",
+    "webpack": "2.5.1"
   },
   "devDependencies": {},
   "scripts": {
