--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "express": "4.14.0",
     "express-graphql": "0.6.1",
     "fetch": "1.1.0",
-    "graphiql": "0.9.2",
-    "graphql": "0.9.6",
+    "graphiql": "0.10.2",
+    "graphql": "^0.10.0",
     "graphql-utilities": "0.0.14",
     "isomorphic-fetch": "2.2.1",
     "json-to-graphql": "0.1.1",
-    "react": "15.4.2",
-    "react-dom": "15.4.2",
+    "react": "15.6.1",
+    "react-dom": "15.6.1",
     "request": "2.81.0",
     "style-loader": "0.17.0",
     "webpack": "2.5.1"
