--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
   "author": "",
   "dependencies": {
     "axios": "0.16.1",
-    "babel-core": "6.24.1",
-    "babel-loader": "7.0.0",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
     "babel-plugin-transform-runtime": "6.23.0",
-    "babel-polyfill": "6.23.0",
+    "babel-polyfill": "6.26.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-react-hmre": "1.1.1",
     "babel-preset-stage-0": "6.24.1",
-    "babel-register": "6.24.1",
+    "babel-register": "6.26.0",
     "babel-runtime": "6.23.0",
     "convict": "3.0.0",
-    "css-loader": "0.28.1",
+    "css-loader": "0.28.7",
     "express": "4.14.0",
     "express-graphql": "0.6.1",
     "fetch": "1.1.0",
@@ -29,10 +29,12 @@
     "react": "15.6.1",
     "react-dom": "15.6.1",
     "request": "2.81.0",
-    "style-loader": "0.17.0",
-    "webpack": "2.5.1"
+    "style-loader": "0.19.0",
+    "webpack": "3.8.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack-devserver": "0.0.6"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "BABEL_ENV=production NODE_ENV=production webpack --config ./webpack.config.js"
