--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "BABEL_ENV=production NODE_ENV=production webpack --config ./webpack.config.js",
-    "dev": "NODE_ENV=development SERVICE_NAME=Stoppestedsregisteret GRAPHQL_URL=https://api-test.entur.org/stop_places/1.0/graphql npm start",
-    "dev-bundle": "npm run build SERVICE_NAME=Stoppestedsregisteret GRAPHQL_URL=https://api-test.entur.org/stop_places/1.0/graphql npm start"
+    "dev": "NODE_ENV=development SERVICE_NAME=Stoppestedsregisteret npm start",
+    "dev-bundle": "npm run build SERVICE_NAME=Stoppestedsregisteret npm start"
   },
   "license": "ISC",
   "devDependencies": {
