--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.15.1",
+    "eslint-plugin-react-hooks": "^2.1.2",
     "eslint-plugin-standard": "^4.0.1",
     "file-loader": "^4.1.0",
     "image-webpack-loader": "^5.0.0",
