Improve: add routing for service, and use lib for query-string handling

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "express-history-api-fallback": "^2.2.1",
     "graphiql": "^0.17.5",
     "graphql": "^14.5.8",
+    "history": "^4.10.1",
     "husky": "^3.1.0",
     "isomorphic-fetch": "^2.2.1",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
+    "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
