--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@entur/form": "^2.0.2",
+    "@entur/icons": "^0.4.2",
+    "@entur/sdk": "^1.0.0-next.35",
+    "@entur/table": "^0.3.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -14,6 +18,7 @@
     "husky": "^3.1.0",
     "isomorphic-fetch": "^2.2.1",
     "lint-staged": "^9.5.0",
+    "lodash.debounce": "^4.0.8",
     "prettier": "^1.19.1",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
