--- a/helm/shamash/templates/configmap.yaml
+++ b/helm/shamash/templates/configmap.yaml
@@ -2,5 +2,5 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
     name: {{ .Release.Name }}-config
-#data:
-#    ENV_VARIABLE: {{ .Values.variable }}
+data:
+    config.json: {{ .Values.configJson }} #TODO: mount as file
