--- a/helm/shamash/templates/configmap.yaml
+++ b/helm/shamash/templates/configmap.yaml
@@ -3,4 +3,4 @@ kind: ConfigMap
 metadata:
     name: {{ .Release.Name }}-config
 data:
-    config.json: {{ .Values.configJson }} #TODO: mount as file
+    DUMMY: "dummy" #config.json: {{ .Values.configJson }} #TODO: mount as file
