--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       tag: '10.4'
     steps:
       - checkout
-      - node/with-cache
+      - node/with-cache:
         cache-key: yarn.lock
         steps:
           - run: yarn
