--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ orbs:
   node: circleci/node@1.1.6
 
 jobs:
-  test:
+  install:
     executor:
       name: node/default
       tag: '10.4'
@@ -18,7 +18,16 @@ jobs:
           cache-key: yarn.lock
           steps:
             - run: yarn
-      - run: yarn test
+  test:
+    executor:
+      name: node/default
+      tag: '10.4'
+    steps:
+      - checkout
+      - node/with-cache:
+          cache-key: yarn.lock
+          steps:
+            - run: yarn test
 
   build:
     executor:
@@ -29,14 +38,16 @@ jobs:
       - node/with-cache:
           cache-key: yarn.lock
           steps:
-            - run: yarn
-      - run: yarn build
+            - run: yarn build
 
 workflows:
   "Build Pipeline":
     jobs:
-      - test
-      - build
+      - install
+      - test:
+        requires: [install]
+      - build:
+        requires: [install]
       - docker/publish: # TODO: attach workspace
           name: publish
           registry: $DOCKER_REGISTRY
@@ -47,6 +58,4 @@ workflows:
           filters:
             branches:
               only: v2
-          requires:
-            - test
-            - build
+          requires: [test, build]
