Remove config map from template and use manually created one

--- a/helm/shamash/templates/deployment.yaml
+++ b/helm/shamash/templates/deployment.yaml
@@ -42,4 +42,4 @@ spec:
       volumes:
         - name: config-volume
           configMap:
-            name: {{ .Release.Name }}-config
+            name: shamash-server-config
