--- a/helm/shamash/templates/ingress.yaml
+++ b/helm/shamash/templates/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ .Release.Name }}
   annotations:
       kubernetes.io/ingress.class: traefik
-      traefik.ingress.kubernetes.io/whitelist-source-range: {{ .Values.ingress.whitelist }}
+      # traefik.ingress.kubernetes.io/whitelist-source-range: {{ .Values.ingress.whitelist }}
       external-dns.alpha.kubernetes.io/target: {{ .Values.loadBalancerIP }}
   labels:
     {{- include "common.labels" . | indent 4 }}
