--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
     "react-scripts": "3.3.0",
     "react-test-renderer": "^16.12.0",
     "uuid": "^3.3.3"
