My custom cache restore did not work when lockfile changed :/

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,8 @@ workflows:
             - *attach_workspace
             - run: |
                 mv /tmp/workspace/build .
-            - restore_cache:
-                keys:
-                - node-deps-v1-{{ .Branch }}-{{ checksum "yarn.lock" }}
+            - node/with-cache:
+                cache-key: yarn.lock
+                cache-version: v1
+                steps:
+                  - run: yarn
