--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ jobs:
           command: |
             set -exu
             mv build /tmp/workspace/
+            mv node_modules /tmp/workspace/
       - persist_to_workspace:
           root: *workspace_root
           paths:
@@ -61,6 +62,4 @@ workflows:
             - *attach_workspace
             - run: |
                 mv /tmp/workspace/build .
-            - restore_cache:
-                keys:
-                - node-deps-v2-{{ .Branch }}-{{ checksum "yarn.lock" }}
+                mv /tmp/workspace/node_modules .
