--- a/helm/shamash/templates/ingress.yaml
+++ b/helm/shamash/templates/ingress.yaml
@@ -4,13 +4,13 @@ metadata:
   name: {{ .Release.Name }}
   annotations:
       kubernetes.io/ingress.class: traefik
-      # traefik.ingress.kubernetes.io/whitelist-source-range: {{ .Values.ingress.whitelist }}
+      traefik.ingress.kubernetes.io/whitelist-source-range: {{ .Values.ingress.whitelist }}
       external-dns.alpha.kubernetes.io/target: {{ .Values.loadBalancerIP }}
   labels:
     {{- include "common.labels" . | indent 4 }}
 spec:
     rules:
-    - host: {{ .Release.Name }}{{ .Values.domain }}
+    - host: {{ .Release.Name }}-{{ .Release.Namespace }}{{ .Values.domain }}
       http:
         paths:
           - backend:
