--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-history-api-fallback": "^2.2.1",
     "graphiql": "^0.17.5",
+    "graphiql-explorer": "^0.5.1",
     "graphql": "^14.5.8",
     "history": "^4.10.1",
     "husky": "^3.1.0",
