--- a/helm/shamash/values-dev.yaml
+++ b/helm/shamash/values-dev.yaml
@@ -1,3 +1,41 @@
 domain: .dev.entur.io
 environment: dev
 loadBalancerIP: 35.205.134.173
+config: |
+    [
+      {
+        "id": "stop-places",
+        "name": "stop-places",
+        "url": "https://api.dev.entur.io/stop-places/v1/graphql",
+        "queries": "stop-places",
+        "defaultQuery": "stopPlace"
+      },
+      {
+        "id": "journey-planner",
+        "name": "journey-planner-v2",
+        "url": "https://api.dev.entur.io/journey-planner/v2/graphql",
+        "queries": "journey-planner",
+        "defaultQuery": "trip"
+      },
+      {
+        "id": "journey-planner-v3",
+        "name": "journey-planner-v3",
+        "url": "https://api.dev.entur.io/journey-planner/v3/graphql",
+        "queries": "journey-planner",
+        "defaultQuery": "trip"
+      },
+      {
+        "id": "journey-planner-nl",
+        "name": "journey-planner-v3-nl",
+        "url": "https://api.dev.entur.io/journey-planner/v2/nl/graphql",
+        "queries": "journey-planner",
+        "defaultQuery": "trip"
+      },
+      {
+        "id": "journey-planner-nordic",
+        "name": "journey-planner-v3-nordic",
+        "url": "https://api.dev.entur.io/journey-planner/v2/nordic/graphql",
+        "queries": "journey-planner",
+        "defaultQuery": "trip"
+      }
+    ]
