--- a/helm/shamash/templates/configmap.yaml
+++ b/helm/shamash/templates/configmap.yaml
@@ -1,9 +1,11 @@
 apiVersion: v1
 data:
-  config.json: |
+  config.json: |-
     {{ .Values.config }}
 
 kind: ConfigMap
 metadata:
   name: shamash-server-config
   namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "common.labels" . | indent 4 }}
