--- a/helm/shamash/templates/configmap.yaml
+++ b/helm/shamash/templates/configmap.yaml
@@ -1,8 +1,6 @@
 apiVersion: v1
 data:
-  config.json: |-
-    {{ .Values.config }}
-
+  config.json: {{ .Values.config | toJson | quote }}
 kind: ConfigMap
 metadata:
   name: shamash-server-config
