--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,6 +54,11 @@ jobs:
             - build/*
             - node_modules/*
   tag:
+    docker:
+      - image: eu.gcr.io/entur-system-1287/circleci-toolbox-image
+        auth:
+          username: _json_key
+          password: $DOCKER_PASSWORD
     steps:
       - checkout
       - run: *tag-git-version
