--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,7 +68,7 @@ workflows:
     jobs:
       - build
       - tag:
-          filter:
+          filters:
             branches:
               only: master
       - docker-publish/publish:
