--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,6 +68,7 @@ workflows:
     jobs:
       - build
       - tag:
+          context: dev
           filters:
             branches:
               only: master
