ROR-809 Add otp2 to production config

--- a/helm/shamash/values-prod.yaml
+++ b/helm/shamash/values-prod.yaml
@@ -16,5 +16,12 @@ config: |-
         "url": "https://api.entur.io/journey-planner/v2/graphql",
         "queries": "journey-planner",
         "defaultQuery": "trip"
+      },
+      {
+        "id": "journey-planner-v3",
+        "name": "journey-planner-v3-beta",
+        "url": "https://api.dev.entur.io/journey-planner/v3/graphql",
+        "queries": "journey-planner",
+        "defaultQuery": "trip"
       }
     ]
