--- a/helm/shamash/values-prod.yaml
+++ b/helm/shamash/values-prod.yaml
@@ -18,7 +18,7 @@ config: |-
         "defaultQuery": "trip"
       },
       {
-        "id": "journey-planner-v3",
+        "id": "journey-planner-v3-beta",
         "name": "journey-planner-v3-beta",
         "url": "https://api.dev.entur.io/journey-planner/v3/graphql",
         "queries": "journey-planner",
