Fix prod config for v3

--- a/helm/shamash/values-prod.yaml
+++ b/helm/shamash/values-prod.yaml
@@ -20,7 +20,7 @@ config: |-
       {
         "id": "journey-planner-v3-beta",
         "name": "journey-planner-v3-beta",
-        "url": "https://api.dev.entur.io/journey-planner/v3/graphql",
+        "url": "https://api.entur.io/journey-planner/v3/graphql",
         "queries": "journey-planner",
         "defaultQuery": "trip"
       }
