Add map displaying pointsOnLink

--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@entur/icons": "^1.12.1",
     "@entur/sdk": "^1.11.0",
     "@entur/table": "^4.0.1",
+    "@mapbox/polyline": "^1.1.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@turf/bbox": "^6.0.1",
+    "@turf/helpers": "^6.1.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "express": "^4.17.1",
@@ -20,12 +23,14 @@
     "history": "^4.10.1",
     "husky": "^3.1.0",
     "isomorphic-fetch": "^2.2.1",
+    "leaflet": "^1.7.1",
     "lint-staged": "^9.5.0",
     "lodash.debounce": "^4.0.8",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-leaflet": "^3.0.2",
     "react-scripts": "3.3.0",
     "react-test-renderer": "^16.12.0",
     "uuid": "^3.3.3"
