WTK-386 Add mobility graphql api in all envs

--- a/helm/shamash/values-staging.yaml
+++ b/helm/shamash/values-staging.yaml
@@ -24,5 +24,12 @@ config: |-
         "url": "https://api.staging.entur.io/journey-planner/v3/graphql",
         "queries": "journey-planner",
         "defaultQuery": "trip"
+      },
+      {
+        "id": "mobility",
+        "name": "Mobility",
+        "url": "https://api.staging.entur.io/mobility/v2/graphql",
+        "queries": "mobility",
+        "defaultQuery": "vehicles"
       }
     ]
