--- a/helm/shamash/values-dev.yaml
+++ b/helm/shamash/values-dev.yaml
@@ -38,5 +38,12 @@ config: |-
         "url": "https://api.dev.entur.io/journey-planner/v2/nordic/graphql",
         "queries": "journey-planner",
         "defaultQuery": "trip"
+      },
+      {
+        "id": "mobility",
+        "name": "Mobility",
+        "url": "https://api.dev.entur.io/mobility/v2/graphql",
+        "queries": "mobility",
+        "defaultQuery": "vehicles"
       }
     ]
