--- a/helm/shamash/values-prod.yaml
+++ b/helm/shamash/values-prod.yaml
@@ -23,5 +23,12 @@ config: |-
         "url": "https://api.entur.io/journey-planner/v3/graphql",
         "queries": "journey-planner",
         "defaultQuery": "trip"
+      },
+      {
+        "id": "mobility",
+        "name": "Mobility",
+        "url": "https://api.entur.io/mobility/v2/graphql",
+        "queries": "mobility",
+        "defaultQuery": "vehicles"
       }
     ]
