--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-leaflet": "^3.0.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.4",
     "react-test-renderer": "^16.12.0",
     "uuid": "^3.3.3"
   },
