--- a/helm/shamash/values-staging.yaml
+++ b/helm/shamash/values-staging.yaml
@@ -27,7 +27,7 @@ config: |-
       },
       {
         "id": "mobility",
-        "name": "Mobility",
+        "name": "mobility",
         "url": "https://api.staging.entur.io/mobility/v2/graphql",
         "queries": "mobility",
         "defaultQuery": "vehicles"
