--- a/helm/shamash/values-staging.yaml
+++ b/helm/shamash/values-staging.yaml
@@ -31,5 +31,12 @@ config: |-
         "url": "https://api.staging.entur.io/mobility/v2/graphql",
         "queries": "mobility",
         "defaultQuery": "vehicles"
+      },
+      {
+        "id": "vehicles",
+        "name": "vehicles",
+        "url": "https://api.staging.entur.io/realtime/v1/vehicles/graphql",
+        "queries": "vehicle-updates",
+        "defaultQuery": "updates"
       }
     ]
