--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "identity-obj-proxy": "3.0.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "26.6.0",
-    "jest-circus": "26.6.0",
+    "jest-circus": "^26.6.3",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
     "leaflet": "^1.7.1",
