--- a/helm/shamash/values-prod.yaml
+++ b/helm/shamash/values-prod.yaml
@@ -35,6 +35,7 @@ config: |-
         "id": "vehicles",
         "name": "vehicles",
         "url": "https://api.entur.io/realtime/v1/vehicles/graphql",
+        "subscriptionsUrl": "wss://api.entur.io/realtime/v1/vehicles/subscriptions",
         "queries": "vehicle-updates",
         "defaultQuery": "updates"
       }
