Upgrade Prettier to 2.3.1, fix errors

--- a/package.json
+++ b/package.json
@@ -133,7 +133,7 @@
   "homepage": "/graphql-explorer",
   "devDependencies": {
     "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^1.19.1"
+    "prettier": "2.3.1"
   },
   "jest": {
     "roots": [
