Split example queries for JP v2 and v3
And update 'enturAppQuery' for JP v3

--- a/helm/shamash/values-dev.yaml
+++ b/helm/shamash/values-dev.yaml
@@ -14,21 +14,21 @@ config: |-
         "id": "journey-planner",
         "name": "journey-planner-v2",
         "url": "https://api.dev.entur.io/journey-planner/v2/graphql",
-        "queries": "journey-planner",
+        "queries": "journey-planner-v2",
         "defaultQuery": "trip"
       },
       {
         "id": "journey-planner-v3",
         "name": "journey-planner-v3",
         "url": "https://api.dev.entur.io/journey-planner/v3/graphql",
-        "queries": "journey-planner",
+        "queries": "journey-planner-v3",
         "defaultQuery": "trip"
       },
       {
         "id": "journey-planner-nordic",
         "name": "journey-planner-v3-nordic",
         "url": "https://api.dev.entur.io/journey-planner/v3/nordic/graphql",
-        "queries": "journey-planner",
+        "queries": "journey-planner-v3",
         "defaultQuery": "trip"
       },
       {
