--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ jobs:
             - node_modules/*
   tag:
     docker:
-      - image: eu.gcr.io/entur-system-1287/circleci-toolbox-image
+      - image: google/cloud-sdk:alpine
         auth:
           username: _json_key
           password: $DOCKER_PASSWORD
